--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div id="app"></div>
     <script src="http://cdn.bootcss.com/vue/2.5.9/vue.min.js"></script>
     <script src="http://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
-    <script src="https://cdn.bootcss.com/axios/0.16.2/axios.min.js"></script>
-    <!-- built files will be auto injected -->
+    <script src="http://cdn.bootcss.com/axios/0.16.2/axios.min.js"></script>
+    <script src="http://cdn.bootcss.com/moment.js/2.22.0/moment.min.js"></script>
+    <script src="http://cdn.bootcss.com/moment.js/2.22.0/moment.min.js"></script>
+    <script src="http://cdn.bootcss.com/vue-lazyload/1.2.1/vue-lazyload.js"></script>
   </body>
 </html>
