--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="http://cdn.bootcss.com/vue/2.5.9/vue.min.js"></script>
+    <!--<script src="http://cdn.bootcss.com/vue/2.5.9/vue.min.js"></script>-->
     <script src="http://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
     <script src="http://cdn.bootcss.com/axios/0.16.2/axios.min.js"></script>
     <script src="http://cdn.bootcss.com/moment.js/2.22.0/moment.min.js"></script>
